--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,41 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../ksl_watcher.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	<title></title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../ksl_watcher.css">
 
+    <title>Register</title>
 </head>
-
 <body>
-	<nav>
-		<a class="button" id="return-button" href="index.html">Return to Home page</a>
-	</nav>
-
-	<form class="nice-box" method="POST">
-  		First name:<br>
-  		<input type="text"><br>
-  		Last name:<br>
-  		<input type="text"><br>
-  		Email:<br>
-  		<input type="email"><br>
-  		Interests:<br>
-		<select>
-  			<option value="Cars">Cars and trucks</option>
-  			<option value="Appliances">Kitchen and Laundry Appliances</option>
-  			<option value="Tools">Tools, e.g. saws, anvils, hammers</option>
-  			<option value="70's Music">Music of the 1970's</option>
-  			<option value="Other">Other Stuff</option>
-		</select><br>
-  		<input class="button" type="submit" name="Register" value="Register">
-	</form>
-
+<div class="container">
+    <ul class="nav nav-pills">
+        <li class="nav-item">
+            <a class="button btn btn-light nav-link" id="return-button" href="index.html">Return to Home page</a>
+        </li>
+    </ul>
+    <form class="nice-box container" method="POST">
+        <div class="form-group">
+            <label>First name:</label>
+            <input class="form-control" type="text"><br>
+        </div>
+        <div class="form-group">
+            <label>Last name:</label>
+            <input class="form-control" type="text"><br>
+        </div>
+        <div class="form-group">
+            <label>Email:</label>
+            <input class="form-control" type="email"><br>
+        </div>
+        <div class="form-group">
+            <label>Interests:</label><br>
+            <select name="interests" size="1">
+                <option value="Cars">Cars and Trucks</option>
+                <option value="Appliances">Kitchen and Laundry Applicances</option>
+                <option value="Tools">Tools, e.g. saws, anvils, hammers</option>
+                <option value="70's Music">Music of the 1970's</option>
+                <option value="Other">Other Stuff</option>
+            </select><br>
+        </div>
+        <div class="form-group">
+            <input class="button" type="submit" name="Register" value="Register">
+            <div>
+    </form>
+</div>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
-
 </html>
